# noir

./: .gitignore  Cargo.toml  Makefile  README.md
src/: alias.rs  app.rs  args.rs  clear_tags.sql  create_images_table.sql  create_table.sql  create_tags_index.sql  create_tags_table.sql  database.rs  database_macro.rs  defun.rs  errors.rs  expander.rs  format.rs  global_alias.rs  image_format.rs  insert.sql  insert_tag.sql  lib.rs  loader.rs  main.rs  meta.rs  output_format.rs  search.rs  search_history.rs  tag.rs  update.sql
src/expression/: mod.rs  modifier.rs  parser.rs
src/server/: download.rs  mod.rs  util.rs
src/sql/: clear_tags.sql  create_aliases_table.sql  create_images_table.sql  create_queue_table.sql  create_search_history_table.sql  create_table.sql  create_tags_index.sql  create_tags_table.sql  delete_tag.sql  insert_alias.sql  insert_image.sql  insert_queue.sql  insert_search_history.sql  insert_tag.sql  remove_tag.sql  update_alias.sql  update_image.sql  update_search_history.sql
static/: index.html  index.js
tests/: expander.rs  shorten_path.rs
