[package]
name = "image-db"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[dependencies]
app_dirs = "1.2"
chrono = "0.4"
clap = "2.31"
failure = "0.1"
immeta = "0.4"
serde = "1.0"
serde_yaml = "0.8"
walkdir = "2"
regex = "1.1"

[dependencies.rusqlite]
version = "0.16"
features = ["chrono"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
