[package]
name = "noir"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
actix-cors = "0.5"
actix-files = "0.5"
actix-web = "3"
app_dirs = "1.2"
clap = "2.31"
curl = "0.4"
dhash = "0.1"
env_logger = "0.6"
failure = "0.1"
if-let-return = "0.1"
image = "0.21"
indicatif = "0.16"
jackdauer = "0.1"
lazy_static = "1.3"
libsqlite3-sys = "0.23"
log = "0.4"
logging_timer = "1.0"
maplit = "1.0"
nom = "7.0"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
shell-escape = "0.1"
walkdir = "2"
wildmatch = "2.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.image-meta]
git = "https://github.com/anekos/image-meta"
rev = "c78dedb80dc29d7ed984a14303d99ece62f505f2"

[dependencies.rusqlite]
version = "0.26"
features = ["chrono", "functions"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
